Implement Windows backend (SCM + Task Scheduler via FFM)
Adds the fourth platform: a complete Windows backend that routes by job
shape — long-running daemons become SCM services, scheduled jobs go to
Task Scheduler.

- internal/windows/: WindowsBackend (routing + lifecycle), Scm seam over
  advapi32 with FfmScm (Java FFM) and RecordingScm for off-Windows tests,
  ServiceHost (bundled pure-Java service host that speaks the SCM control
  protocol via FFM upcalls and supervises the real command, honoring
  RestartPolicy), TaskScheduler seam + SchtasksScheduler + TaskXmlWriter,
  Sidecar{Writer,Reader} with a small confined Json codec for the
  %ProgramData%\ServicePal\<id>.json definition files.
- Solves the pivotal Windows quirk (a service binary must speak the SCM
  protocol or die with error 1053) without shipping any compiled binary.
- SYSTEM_WIDE only for v1 (perUserInstall=false); calendar + interval
  scheduling via Task Scheduler; structured status via QueryServiceStatusEx.
- Wires WindowsBackend into DefaultServiceManager; adds a Windows branch to
  SelfTestCli (LocalSystem service running `ping -n 120`).
- Bumps the build to JDK 25 (FFM is final in 22; 25 is the first LTS with
  it final); CI/release/probe to setup-java 25; passes
  --enable-native-access=ALL-UNNAMED where the FFM paths run (JEP 472).
- 20 new off-Windows unit tests (68 total, all green).
- Updates CLAUDE.md, README, the design doc, and the Windows plan to mark
  Windows implemented; OpenRC is now the last remaining backend.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Aj24g7CSGELM1psBzggSnE